tests/paczka1/fuzzy1/95301150.err
Error in line 5: 3yI A290 88,4
Error in line 16: Vvff S96 49,5
Error in line 11: 3yI A939 59,2
Error in line 30: A939 S96 9,5
Error in line 32: A939 A939 69,2
Error in line 25: 3yI A939 31,0
Error in line 36: zrvLW A290 31,7
